--- a/asset/sass/Layouts/_header.scss
+++ b/asset/sass/Layouts/_header.scss
@@ -76,6 +76,7 @@ header{
                             transition: 300ms ease all;
                             list-style: none;
                             opacity: 0;
+                            background: white;
                             .menuitem{
                                 font-size: $fs-2;
                                 .item1{
