--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -92,6 +92,7 @@ header .port .menuport .navbar .nav-item .submenu {
   transition: 300ms ease all;
   list-style: none;
   opacity: 0;
+  background: white;
 }
 header .port .menuport .navbar .nav-item .submenu .menuitem {
   font-size: 0.9em;
@@ -328,6 +329,8 @@ header .port .menuport .navbar .topbarinmenu .topbarinmenucell .logo3 .icon1:hov
   justify-content: center;
 }
 .services .services1 .services_container {
+  position: relative;
+  z-index: 100;
   width: 1000px;
 }
 .services .services1 .services_container .services_img1 {
@@ -342,6 +345,7 @@ header .port .menuport .navbar .topbarinmenu .topbarinmenucell .logo3 .icon1:hov
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 30px 30px -10px rgba(0, 0, 0, 0.2);
+  padding-top: 40px;
 }
 .services .services1 .services_container .services_content2 .service_text {
   font-size: 15px;
@@ -353,20 +357,159 @@ header .port .menuport .navbar .topbarinmenu .topbarinmenucell .logo3 .icon1:hov
   font-size: 2.5rem;
   font-weight: 700;
   color: #181818;
+  text-align: center;
 }
 .services .services1 .services_container .services_content2 .services_contact1 {
   display: flex;
   padding-bottom: 1em;
 }
 .services .services1 .services_container .services_content2 .services_contact1 .contactname {
-  flex: 1 0 50%;
-  max-width: 50%;
-  padding-right: 1em;
+  width: 50%;
+  padding: 0 1em;
   position: relative;
 }
 .services .services1 .services_container .services_content2 .services_contact1 .contactname .icon1 {
   position: absolute;
   top: 1em;
-  left: 1em;
+  left: 2em;
   line-height: 1;
+  color: #b61984;
+}
+.services .services1 .services_container .services_content2 .services_contact1 .contactname .text1 {
+  border-radius: 50px;
+  padding: 1em 1em 1em 3.5em !important;
+  font-size: 0.8em !important;
+  height: 3.7em;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  width: 100%;
+}
+.services .services1 .services_container .services_content2 .services_contact1 .contactname .text1:focus {
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.3);
+}
+.services .services1 .services_container .services_content2 .services_contact1 .contactemail {
+  width: 50%;
+  position: relative;
+  padding: 0 1em;
+}
+.services .services1 .services_container .services_content2 .services_contact1 .contactemail .icon1 {
+  position: absolute;
+  top: 1em;
+  left: 2em;
+  line-height: 1;
+  color: #b61984;
+}
+.services .services1 .services_container .services_content2 .services_contact1 .contactemail .text1 {
+  border-radius: 50px;
+  padding: 1em 1em 1em 3.5em !important;
+  font-size: 0.8em !important;
+  height: 3.7em;
+  border: 1px solid #e5e5e5;
+  width: 100%;
+}
+.services .services1 .services_container .services_content2 .services_contact1 .contactemail .text1:focus {
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
+}
+.services .services1 .services_container .services_content2 .services_contact1 {
+  display: flex;
+  padding-bottom: 1em;
+}
+.services .services1 .services_container .services_content2 .services_contact1 .contactlist {
+  width: 100%;
+  position: relative;
+  padding: 0 15px;
+}
+.services .services1 .services_container .services_content2 .services_contact1 .contactlist .icon1 {
+  top: 0.9em;
+  color: #b61984;
+  position: absolute;
+  left: 2em;
+}
+.services .services1 .services_container .services_content2 .services_contact1 .contactlist .select {
+  font-size: 0.8em;
+  padding: 0 0 0 3em;
+  line-height: 3.2em;
+  border-radius: 50px;
+  border: 1px solid #e5e5e5;
+  height: 3.2em;
+  cursor: pointer;
+  width: 100%;
+  color: #757575;
+  transition: all 500ms ease;
+}
+.services .services1 .services_container .services_content2 .services_contact1 .contactlist .select:focus {
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
+}
+.services .services1 .services_container .services_content2 .services_contact1 {
+  display: flex;
+  padding-bottom: 1em;
+}
+.services .services1 .services_container .services_content2 .services_contact1 .contactmessage {
+  width: 100%;
+  position: relative;
+  padding: 0 15px;
+}
+.services .services1 .services_container .services_content2 .services_contact1 .contactmessage .icon1 {
+  top: 1em;
+  position: absolute;
+  left: 2em;
+  line-height: 1;
+  color: #b61984;
+}
+.services .services1 .services_container .services_content2 .services_contact1 .contactmessage .textarea {
+  padding: 1em 1em 1em 3.5em !important;
+  height: 90px;
+  line-height: 1.5;
+  font-size: 0.8em !important;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  width: 100%;
+}
+.services .services1 .services_container .services_content2 .services_btn {
+  max-width: 150px;
+  padding-top: 2em;
+  padding-bottom: 6em;
+  margin-left: 20px;
+}
+.services .services1 .services_container .services_content2 .services_btn .submit {
+  border-radius: 50px;
+  height: 3.5em;
+  line-height: 3.1em;
+  box-shadow: 0 0 0 3em #b61984 inset;
+  cursor: pointer;
+  font-size: 0.9em;
+  font-weight: 600;
+  color: #fff;
+  width: 100%;
+  display: block;
+  cursor: pointer;
+  background: transparent;
+  transition: all 300ms ease;
+  border: none;
+}
+.services .services1 .services_container .services_content2 .services_btn .submit:hover {
+  box-shadow: 0 0 0 1px #b61984 inset;
+  color: #b61984;
+}
+.services .services2 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.services .services2 .services2_img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.footer {
+  background-image: url(../../img/footer_background.jpg);
+  position: relative;
+  background-size: cover;
+  background-position: center;
+}
+.footer .footer_container {
+  padding-bottom: 8em;
+  padding-top: 8em;
 }/*# sourceMappingURL=main.css.map */
