--- a/asset/sass/Layouts/_services.scss
+++ b/asset/sass/Layouts/_services.scss
@@ -5,6 +5,8 @@
         display: flex;
         justify-content: center;
        .services_container{
+        position: relative;
+        z-index: 100;
          width: 1000px;
          .services_img1{
             display: block;
@@ -18,30 +20,162 @@
             border-radius: 10px;
              overflow: hidden;
              box-shadow: 0 30px 30px -10px rgb(0 0 0 / 20%);
+             padding-top: 40px;
              .service_text{
                 @include styleText($fs-1,$fw-1,$color-dark-2);
                 margin-bottom: 50px;
                 .text{
-                    @include styleText($fs-12,$fw-4,$color-dark-2)
+                    @include styleText($fs-12,$fw-4,$color-dark-2);
+                    text-align: center;
                 }
              }
              .services_contact1{
                 display: flex;
                 padding-bottom: 1em;
                 .contactname{
-                    flex: 1 0 50%;
-                    max-width: 50%;
-                    padding-right: 1em;
+                    width: 50%;
+                    padding:0 1em;
                     position: relative;
+                   
+                   
                     .icon1{
                         position: absolute;
                         top: 1em;
-                        left: 1em;
+                        left: 2em;
                         line-height: 1;
+                        color: #b61984;
+                        }
+                        .text1{
+                            border-radius: 50px;
+                            padding: 1em 1em 1em 3.5em !important;
+                            font-size: .8em !important;
+                            height: 3.7em;
+                            border: 1px solid rgba(0,0,0,.1);
+                            width: 100%;
+                            &:focus{
+                                box-shadow: 0 0 4px 0 rgb(0 0 0 / 10%);
+                                border: 1px solid rgba(0,0,0,.3);
+                               
+
+                            }
+                        }
+                    }
+                    .contactemail{
+                        width: 50%;
+                        position: relative;
+                        padding: 0 1em;
+                        .icon1{
+                            position: absolute;
+                            top: 1em;
+                            left: 2em;
+                            line-height: 1;
+                            color: #b61984;
+                        
+                    }
+                    .text1{
+                        border-radius: 50px;
+                        padding: 1em 1em 1em 3.5em !important;
+                        font-size: .8em !important;
+                        height: 3.7em;
+                        border: 1px solid #e5e5e5;
+                        width: 100%;
+                        &:focus{
+                            border: 1px solid rgba(0,0,0,.3);
+                            box-shadow: 0 0 4px 0 rgb(0 0 0 / 10%);
                         }
                     }
                 }
              }
+             .services_contact1{
+                display: flex;
+                padding-bottom: 1em;
+                .contactlist{
+                    width: 100%;
+                    position: relative;
+                    padding:0 15px;
+                    .icon1{
+                        top: 0.9em;
+                        color: $color-violet-1;
+                        position: absolute;
+                        left: 2em;
+                    }
+                    .select{
+                        font-size: .8em;
+                        padding: 0 0 0 3em;
+                        line-height: 3.2em;
+                        border-radius: 50px;
+                        border: 1px solid #e5e5e5;
+                        height: 3.2em;
+                        cursor: pointer;
+                        width: 100%;
+                        color: #757575;
+                        transition: all 500ms ease;
+                        &:focus{
+                            border: 1px solid rgba(0,0,0,.3);
+                            box-shadow: 0 0 4px 0 rgb(0 0 0 / 10%);
+                        }
+                }
+             }
+             }
+             .services_contact1{
+                display: flex;
+                padding-bottom: 1em;
+                .contactmessage{
+                    width: 100%;
+                    position: relative;
+                    padding:0 15px ;
+                    .icon1{
+                        top: 1em;
+                        position: absolute;
+                        left: 2em;
+                        line-height: 1;
+                        color: $color-violet-1;
+                    }
+                    .textarea{
+                        padding: 1em 1em 1em 3.5em !important;
+                        height: 90px;
+                        line-height: 1.5;
+                        font-size: .8em !important;
+                        border: 1px solid rgba(0,0,0,.1);
+                        width: 100%;
+                        }
+                    }
+                }
+                .services_btn{
+                    max-width: 150px;
+                    padding-top: 2em;
+                    padding-bottom: 6em;
+                    margin-left: 20px;
+                    .submit{
+                        border-radius: 50px;
+                        height: 3.5em;
+                        line-height: 3.1em;
+                        box-shadow: 0 0 0 3em #b61984 inset;
+                        cursor: pointer;
+                        @include styleText($fs-2,$fw-2,$color-white-3);
+                        width: 100%;
+                        display: block;
+                        cursor: pointer;
+                        background: transparent;
+                        transition: all 300ms ease;
+                        border: none;
+                        &:hover{
+                            box-shadow: 0 0 0 1px #b61984 inset;
+                            color: #b61984;
+                        }
+                    }
+                }
          }
        }
     }
+    .services2{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        .services2_img{
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+    }
+}
