--- a/asset/sass/Helper/_mixin.scss
+++ b/asset/sass/Helper/_mixin.scss
@@ -21,3 +21,16 @@
     border:$border-hover ;
     color: $color-hover;
 }
+@mixin responsive($screen){
+    @if(map-has-key($map: $breakpoints, $key:$screen )){
+        // nếu có tên màn hình trong breakpoin
+        //lấy giá trị màn hình và lưu vào biến value
+        $value :map-get($map: $breakpoints, $key:$screen );
+        @media screen and(max-width:$value){
+            @content;
+        }
+    }
+    @else{
+        @warn 'màn hình không tồn tại'
+    }
+}
