--- a/asset/sass/Layouts/_footer.scss
+++ b/asset/sass/Layouts/_footer.scss
@@ -1,10 +1,148 @@
 .footer{
-    background-image: url(../../img/footer_background.jpg);
+    background-image: url(../img/footer_background.jpg);;
     position: relative;
     background-size: cover;
-    background-position: center;
-    .footer_container{
+    background-position: top;
+    color: #fff;
+        .footer_container{
     padding-bottom: 8em;
     padding-top: 8em;
+    display: flex;
+    justify-content: center;
+     .footer_container1{
+        width: $w-2;
+        margin: auto;
+        .footer_row{
+            margin-left: -40px;
+            margin-right: -40px;
+            .footer_content{
+                width: 100%;
+                .title{
+                    @include styleText($fs-11,$fw-4,$color-white-3);
+                    padding-bottom: 20px;
+                }
+                .text{
+                    font-size: .9em;
+                    padding-left: 0.8em;
+
+                }
+                .footer_icon1{
+                   float: left;
+                   padding-right: 0.5em;
+                   padding-top: 20px;
+                   .icon5{
+                    color: #ffffff;
+                    transition: all 200ms ease;
+                    &:hover{
+                        color: $color-dark-2;
+                    }
+                   }
+                    
+                }
+            }
+            .footer_content{
+                width: 100%;
+                .title{
+                    @include styleText($fs-11,$fw-4,$color-white-3);
+                }
+                .footer_list1{
+                    display: flex;
+                .menu{
+                    list-style: none;
+                    .menu_item{
+                        margin-left: 0;
+                        padding-top: 0;
+                        list-style: none;
+                        border-bottom: 1px solid rgba(0,0,0,.1);
+                        line-height: 1;
+                        padding: 0.8em 0;
+                        width: 100%;
+                        .text2{
+                            font-size: .9em;
+                            text-decoration: none;
+                            color: #fff;
+                            transition: all 200ms ease;
+                            &:hover{
+                                opacity: .8;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+            .footer_content{
+                width: 100%;
+                .title{
+                    @include styleText($fs-11,$fw-4,$color-white-3);
+                }
+                .btnemail{
+                    border: 1px solid rgba(255,255,255,.1);
+                    transition: all 500ms ease;
+                    border-radius: 50px;
+                    outline: none;
+                    height: 3.2em;
+                    width: 85%;
+                    background: transparent;
+                    line-height: 1;
+                    display: block;
+                    padding: 1em;
+                    color: #fff;
+                    text-align: center;
+                    &:focus{
+                        border: 1px solid rgba(255,255,255,1);
+                    }
+                  
+                    }
+                    .btnsubmit{
+                        box-shadow: 0 0 0 3em #fff inset;
+                        color: #181818;
+                        border-radius: 50px;
+                         line-height: 3.1em;
+                         text-align: center;
+                         display: block;
+                        cursor: pointer;
+                        font-size: .8em;
+                        letter-spacing: 1px;
+                        font-weight: 600;
+                        height: 4em;
+                        width: 85% !important;
+                        border: none;
+                         background: transparent;
+                         transition: all 300ms ease;
+                         margin-top: 8px;
+                         &:hover{
+                            box-shadow: 0 0 0 1px #fff inset;
+                            color: #fff;
+                         }
+                    }
+                }
+            }
+        }
+    }
    }
+@include responsive("large"){
+    .footer{
+        text-align: center;
+    }
+    .menu{
+        margin: 0 222px 20px;
+    }
+    .formbtn{
+      margin-left: 183px;
+    }
+    .footer_icon{
+        margin: 0 205px 50px;
+    }
+
+}
+@include responsive("medium"){
+    .menu{
+        margin: 0 370px 20px;
+}
+.footer_icon{
+    margin: 0 356px 64px;
+}
+.formbtn{
+    margin-left: 96px;
+  }
 }
