--- a/asset/sass/Layouts/_footer.scss
+++ b/asset/sass/Layouts/_footer.scss
@@ -97,9 +97,9 @@
                         box-shadow: 0 0 0 3em #fff inset;
                         color: #181818;
                         border-radius: 50px;
-                         line-height: 3.1em;
-                         text-align: center;
-                         display: block;
+                        line-height: 3.1em;
+                        text-align: center;
+                        display: block;
                         cursor: pointer;
                         font-size: .8em;
                         letter-spacing: 1px;
@@ -120,29 +120,29 @@
         }
     }
    }
-@include responsive("large"){
-    .footer{
-        text-align: center;
-    }
-    .menu{
-        margin: 0 222px 20px;
-    }
-    .formbtn{
-      margin-left: 183px;
-    }
-    .footer_icon{
-        margin: 0 205px 50px;
-    }
+// @include responsive("large"){
+//     .footer{
+//         text-align: center;
+//     }
+//     .menu{
+//         margin: 0 222px 20px;
+//     }
+//     .formbtn{
+//       margin-left: 183px;
+//     }
+//     .footer_icon{
+//         margin: 0 205px 50px;
+//     }
 
-}
-@include responsive("medium"){
-    .menu{
-        margin: 0 370px 20px;
-}
-.footer_icon{
-    margin: 0 356px 64px;
-}
-.formbtn{
-    margin-left: 96px;
-  }
-}
+// }
+// @include responsive("medium"){
+//     .menu{
+//         margin: 0 370px 20px;
+// }
+// .footer_icon{
+//     margin: 0 356px 64px;
+// }
+// .formbtn{
+//     margin-left: 96px;
+//   }
+// }
